--- a/Wizchat/bower.json
+++ b/Wizchat/bower.json
@@ -1,9 +1,10 @@
 {
-	"name": "ASP.NET",
-	"private": true,
+  "name": "ASP.NET",
+  "private": true,
   "dependencies": {
     "angular": "^1.4.8",
     "jquery": "^2.2.0",
-    "bootstrap": "3.3.6"
+    "bootstrap": "3.3.6",
+    "signalr": "~2.2.0"
   }
 }
