--- a/Wizchat/project.json
+++ b/Wizchat/project.json
@@ -11,7 +11,8 @@
     "Microsoft.AspNet.StaticFiles": "1.0.0-rc1-final",
     "Microsoft.AspNet.SignalR.Server": "3.0.0-rc1-final",
     "Microsoft.AspNet.WebSockets.Server": "1.0.0-rc1-final",
-    "Microsoft.AspNet.Hosting": "1.0.0-rc1-final"
+    "Microsoft.AspNet.Hosting": "1.0.0-rc1-final",
+    "Microsoft.AspNet.Diagnostics": "1.0.0-rc1-final"
   },
 
   "commands": {
